--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -61,7 +61,7 @@
 
         <div class="dates-input-wrapper">
           <label for="dates" class="block textGray">Dates</label>
-          <input id="new-booking-dates" type="text" name="dates" class="mb-2 w-100 datepicker">
+          <input id="new-booking-datepickr" type="text" name="dates" class="mb-2 w-100 datepicker">
         </div>
 
         <div>
