--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -1,113 +1,116 @@
+.generalProfile {
+	#note_content {
+		@extend .bg-white;
+	}
+}
+
 .profileBanner {
-  @extend .w-100;
-  height: 40vh;
-  background-position: center;
-  background-size: cover;
-  // position: absolute;
-  top: 0;
+	@extend .w-100;
+	height: 40vh;
+	background-position: center;
+	background-size: cover;
+	// position: absolute;
+	top: 0;
 }
 
 .profileHeader {
-  @extend .flex;
-  @extend .justify-content-between;
-  @extend .items-center;
-  @extend .p-3;
-  position: relative;
-  width: 100%;
-  background-color: white;
-  border-top-right-radius: 40px;
-  box-sizing: border-box;
-  bottom: 32px;
-  h1 {
-    font-size: 24px;
-    @extend .mb-0;
-    @extend .mt-2;
-  }
-    .rating-size {
-      margin-left: 4px;
-      color: #6c7b8a;
-    }
+	@extend .flex;
+	@extend .justify-content-between;
+	@extend .items-center;
+	@extend .p-3;
+	position: relative;
+	width: 100%;
+	background-color: white;
+	border-top-right-radius: 40px;
+	box-sizing: border-box;
+	bottom: 32px;
+	h1 {
+		font-size: 24px;
+		@extend .mb-0;
+		@extend .mt-2;
+	}
+	.rating-size {
+		margin-left: 4px;
+		color: #6c7b8a;
+	}
 }
 
 .profileButtons {
+	margin-top: -32px; // Removes white space left by relative position of the div above it
 
-  margin-top: -32px; // Removes white space left by relative position of the div above it
+	.btn-lg {
+		flex-grow: 1;
+		border-radius: 8px;
+		text-align: center;
+		font-size: 12px;
+	}
 
-  .btn-lg {
-    flex-grow: 1;
-    border-radius: 8px;
-    text-align: center;
-    font-size: 12px;
-  }
+	a {
+		img {
+			@extend .mr-2;
+			height: 32px;
+			width: 32px;
+		}
 
-  a {
-    img {
-      @extend .mr-2;
-      height: 32px;
-      width: 32px;
-    }
+		a::first-child {
+			color: white;
+		}
 
-    a::first-child {
-      color: white;
-    }
+		&:visited {
+			color: inherit;
+		}
 
-    &:visited {
-      color: inherit;
-    }
+		p {
+		}
+		letter-spacing: 2px;
 
-    p {
-
-    } letter-spacing: 2px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 }
 
 // For the bottom left rounded corner of the banner
 // https://itnext.io/how-to-make-a-fancy-inverted-border-radius-in-css-5db048a53f95
 .profileHeader::before {
-  content: "";
-  position: absolute;
-  background-color: transparent;
-  // bottom: 134px;
-  top: -64px;
-  left: 0px;
-  height: 64px;
-  width: 39px;
-  border-bottom-left-radius: 58px;
-  box-shadow: -3px 28px 0px -1px white;
+	content: "";
+	position: absolute;
+	background-color: transparent;
+	// bottom: 134px;
+	top: -64px;
+	left: 0px;
+	height: 64px;
+	width: 39px;
+	border-bottom-left-radius: 58px;
+	box-shadow: -3px 28px 0px -1px white;
 }
 
 .profileButtons {
-  @extend .p-3;
-  @extend .pt-0;
+	@extend .p-3;
+	@extend .pt-0;
 }
 
 #writeYourNote {
-  textarea {
-    box-sizing: border-box;
-    height: 120px;
-  }
-
+	textarea {
+		box-sizing: border-box;
+		height: 120px;
+	}
 }
 
 .headerOptions {
-  position: absolute;
-  top: 8px;
-  width: -webkit-fill-available;
-  width: -moz-available;
-  width: fill-available;
-
+	position: absolute;
+	top: 8px;
+	width: -webkit-fill-available;
+	width: -moz-available;
+	width: fill-available;
 }
 
 @media (min-width: 688px) {
-  .headerOptions {
-    position: relative;
-  }
+	.headerOptions {
+		position: relative;
+	}
 
-  .profileBanner {
-    height: 60vh;
-  }
+	.profileBanner {
+		height: 60vh;
+	}
 }
