settings page init

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -11,7 +11,7 @@
           <% else %>
             <%= link_to "My profile", profile_path(current_user.profile), class: "action-link" %>
           <% end %>
-          <%= link_to "Settings", "#", class: "action-link" %>
+          <%= link_to "Settings", settings_path, class: "action-link" %>
           <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "action-link btn-unstyled textMd" %>
         </div>
       </div>
