--- a/app/views/pages/settings.html.erb
+++ b/app/views/pages/settings.html.erb
@@ -1,6 +1,6 @@
 <div id="settings-page">
   <div class="flex justify-content-between items-center px-3">
-    <%= link_to :back do %>
+    <%= link_to dashboard_path do %>
       <%= image_tag "icons/cross.svg", alt: "back button", width: 16, height: 16 %>
     <% end %>
     <h3 class="uppercase semi-bold">Settings</h3>
