--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -32,14 +32,7 @@
         </div>
       </div>
     <% end %>
-
-  <% unless params[:ob].present? && params[:ob] == "t" %>
-    <div class="add-more flex flex-column items-center justify-content-center">
-      <p class="text-center textBlue bold textLg">Find more freelancers by posting a job</p>
-      <%= image_tag "icons/phone-hand.svg", alt: "phone-hand", width: 312, height: 312 %>
-    </div>
-  <% end %>
-
+  </section>
   <div class="none" id="filter-content">
     <%= render partial: "profiles/filter_content" %>
   </div>
