spacing on new job

--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -96,7 +96,7 @@
       </div>
       <div class="separator">
         <div class="mx-3">
-          <button type="submit" class="btn btn-secondary">
+          <button type="submit" class="btn btn-secondary mb-3">
             <div class="flex items-center justify-content-center">
               <%= image_tag "icons/brief.svg", alt: "brief" %>
               <span class="textWhite bold">Post job</span>
