--- a/app/assets/stylesheets/pages/_custom_invitations.scss
+++ b/app/assets/stylesheets/pages/_custom_invitations.scss
@@ -32,7 +32,7 @@
       outline: none;
     }
 
-    input {
+    input.email {
       @extend .mt-2;
       height: 48px;
       box-sizing: border-box;
