--- a/app/views/bookings/_booking_cards.html.erb
+++ b/app/views/bookings/_booking_cards.html.erb
@@ -4,6 +4,13 @@
       <%= render partial: "bookings/#{current_user.role}_card", locals: { booking: booking, day: day, first: bookings[0] == booking } %>
     <% end %>
   <% end %>
-<% else %>
+<% end %>
+<% if current_user.manager? %>
+  <p class="uppercase mt-0 mb-3 text-center text-dark-5 alternate">Archive <%= image_tag "icons/up-chevron.svg", alt: "Up chevron", width: 12, height: 12, class: "vertical-align-middle" %></p>
+  <% archived_bookings.each do |booking| %>
+    <%= render partial: "bookings/manager_card", locals: { booking: booking, first: false, archived: true } %>
+  <% end %>
+<% end %>
+<% if booking_group.keys.length.zero? && archived_bookings.length.zero? %>
   <h3 class="text-center">No bookings found!</h3>
 <% end %>
