--- a/app/views/bookings/_manager_card.html.erb
+++ b/app/views/bookings/_manager_card.html.erb
@@ -2,7 +2,7 @@
   <% if first %>
     <p class="uppercase mt-0 mb-3"><%= week(day) %></p>
   <% end %>
-  <div class="booking-card bg-white mb-3 <%= booking.status %>" data-id="<%= booking.id %>" role="button">
+  <div class="booking-card <%= defined?(archived) ? "bg-blueish-gray" : "bg-white" %> mb-3 <%= booking.status %>" data-id="<%= booking.id %>" role="button">
     <div class="flex justify-content-between items-center">
       <div class="flex flex-column">
         <h3 class="m-0 textMd mb-1"><%= booking.title %></h3>
