--- a/app/assets/stylesheets/components/_action_button.scss
+++ b/app/assets/stylesheets/components/_action_button.scss
@@ -26,7 +26,11 @@
 			bottom: unset;
 		}
 
-		.action-link {
+		.action-link,
+		button {
+			@extend .textMd, .w-100;
+
+			text-align: start;
 			color: white;
 			text-transform: uppercase;
 			border-bottom: 1px solid rgba(255, 255, 255, 0.05);
@@ -51,6 +55,5 @@
 		backdrop-filter: blur(100px);
 		font-size: 40px;
 		color: white;
-
 	}
 }
