--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -39,8 +39,10 @@
             <%= link_to "#", class: "action-link" do %>
               CREATE BOOKING
             <% end %>
-            <%= link_to "#", class: "action-link" do %>
-              ARCHIVE
+            <% if @job.status != "archived" %>
+              <%= button_to job_archive_path(@job), method: :patch, class: "action-link" do %>
+                ARCHIVE
+              <% end %>
             <% end %>
           </div>
         </div>
