initial scaffolding cant test cause of 443 :

--- a/app/assets/stylesheets/pages/_settings.scss
+++ b/app/assets/stylesheets/pages/_settings.scss
@@ -3,7 +3,29 @@
 		font-size: 24px;
 	}
 
+    input.email {
+      @extend .mt-2;
+      height: 48px;
+      box-sizing: border-box;
+    }
+
+  button {
+    outline: none;
+  }
+
+
+  #invitation-add-btn {
+    position: absolute;
+    right: 4px;
+    top: 32px;
+  }
+
 	#content {
 		height: calc(90vh - 60px);
 	}
+
+  #sentEmails {
+    max-height: 300px;
+    overflow-y: scroll;
+  }
 }
