--- a/app/views/users/invitations/create.js.erb
+++ b/app/views/users/invitations/create.js.erb
@@ -2,6 +2,7 @@
   const email = "<%= @email %>";
   const emailInput = document.getElementById("invitation_email");
   const resent = "<%= @resent %>";
+  const sentEmails = document.getElementById("sentEmails");
 
   if (resent === "true") {
     const resentLink = document.querySelector(`.invitedWrapper a[data-email='${email}']`);
@@ -27,8 +28,10 @@
 
     const invitedHTML = (`<%= j render('custom_invitations/invited_list_item') %>`);
 
+    const emailsContainer = sentEmails || form;
+    const position = sentEmails ? 'afterbegin' : 'beforebegin'
 
-    form.insertAdjacentHTML('beforebegin', invitedHTML)
+    emailsContainer.insertAdjacentHTML(position, invitedHTML)
 
     form.reset();
 
