--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,7 +1,7 @@
 .avatar {
 	width: 80px;
 	height: 80px;
-  object-fit: contain;
+	object-fit: cover;
 
 	&.avatar-circle {
 		@extend .rounded-circle;
