--- a/app/assets/stylesheets/pages/_job_show.scss
+++ b/app/assets/stylesheets/pages/_job_show.scss
@@ -17,6 +17,7 @@
 				width: 60px;
 
 				img {
+					object-fit: cover;
 					border-radius: 50%;
 					width: 80%;
 					height: 80%;
@@ -53,28 +54,28 @@
 		}
 	}
 
-  .company-logo {
-    @extend .mb-2, .rounded-square;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    box-shadow: 0px 3px 6px -2px rgba(50, 51, 9, .1);
-    width: 64px;
-    height: 40px;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
+	.company-logo {
+		@extend .mb-2, .rounded-square;
+		border-top-left-radius: 0;
+		border-top-right-radius: 0;
+		box-shadow: 0px 3px 6px -2px rgba(50, 51, 9, 0.1);
+		width: 64px;
+		height: 40px;
+		background-size: contain;
+		background-position: center;
+		background-repeat: no-repeat;
+	}
 
-  .skill-pill {
-    font-size: 12px;
-  }
+	.skill-pill {
+		font-size: 12px;
+	}
 
-  .navHeader {
-    p {
-      font-size: 18px;
-      &:first-of-type {
-        font-weight: 600;
-      }
-    }
-  }
+	.navHeader {
+		p {
+			font-size: 18px;
+			&:first-of-type {
+				font-weight: 600;
+			}
+		}
+	}
 }
