--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,7 @@
 <div id="dashboardPage" class="mx-3">
   <div class="head mb-3 flex justify-content-between items-center">
     <%# DON'T REMOVE %>
-    <div></div>
+    <div style="width: 32px;"></div>
     <h1>Hello <%= current_user.first_name %></h1>
     <div class="relative">
       <div class="actions-container none">
