--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -24,7 +24,7 @@
 		}
 
 		.bookings-count {
-			@extend .flex, .items-center, .my-3;
+			@extend .flex, .items-center, .justify-content-center, .my-3;
 
 			color: $blue-2;
 			font-weight: 600;
