--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -13,8 +13,8 @@
           <%= image_tag "icons/checkmark", alt: "active bookings" %>
         </div>
         <div class="ml-2">
-          <h4 class="m-0">Accepted</h4>
-          <p class="subtitle m-0"><%= pluralize @bookings.accepted.count, "booking" %></p>
+          <h4 class="m-0 textBetween">Accepted</h4>
+          <p class="textSm m-0"><%= pluralize @bookings.accepted.count, "booking" %></p>
         </div>
       </div>
       <%= link_to bookings_path(status: 1) do %>
@@ -28,8 +28,8 @@
           <%= image_tag "icons/pending.svg", alt: "pending bookings" %>
         </div>
         <div class="ml-2">
-          <h4 class="m-0">Pending</h4>
-          <p class="subtitle m-0"><%= pluralize @bookings.pending.count, "booking" %></p>
+          <h4 class="m-0 textBetween">Pending</h4>
+          <p class="textSm m-0"><%= pluralize @bookings.pending.count, "booking" %></p>
         </div>
       </div>
       <%= link_to bookings_path(status: 0) do %>
@@ -43,8 +43,8 @@
           <%= image_tag "icons/cross-white.svg", alt: "rejected bookings" %>
         </div>
         <div class="ml-2">
-          <h4 class="m-0">Cancelled / Declined</h4>
-          <p class="subtitle m-0"><%= pluralize @bookings.rejected.count, "booking" %></p>
+          <h4 class="m-0 textBetween">Cancelled / Declined</h4>
+          <p class="textSm m-0"><%= pluralize @bookings.rejected.count, "booking" %></p>
         </div>
       </div>
       <%= link_to bookings_path(status: 3) do %>
