--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -30,8 +30,13 @@ input[type="submit"] {
 	}
 
 	&.btn-primary {
+		@extend .border-box, .flex, .justify-content-center, .items-center;
+
 		color: #fff;
 		background: $dark-blue-gradient;
+		font-weight: 500;
+		font-size: 14px !important;
+		height: 40px;
 	}
 
 	&.btn-secondary {
