--- a/app/views/pages/_manager_dashboard.html.erb
+++ b/app/views/pages/_manager_dashboard.html.erb
@@ -56,8 +56,8 @@
   </div>
 
   <div class="shadow-alt rounded p-3 mb-4">
-    <h3 class="mt-0 mb-1">Job posts</h3>
-    <p class="subtitle"><%= pluralize current_user.manager.job_applications.count, "applicant" %> for <%= pluralize current_user.manager.jobs.count, "job post" %></p>
+    <h3 class="mt-0 mb-1 textMd">Job posts</h3>
+    <p class="subtitle m-0 textSm"><%= pluralize current_user.manager.job_applications.count, "applicant" %> for <%= pluralize current_user.manager.jobs.count, "job post" %></p>
 
     <% @jobs.each do |job| %>
       <%= link_to job_path(job), class: "card-container flex items-center justify-content-between" do %>
