--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -159,8 +159,7 @@ $day-header-height: 60px;
 					border: 1px solid transparent;
 
 					span {
-						@extend .textSm;
-
+						font-size: 10px;
 						color: #8a9099;
 						font-weight: 500;
 
