--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,22 +26,33 @@ body {
 	color: $black;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span {
+	@extend .noSelect;
+}
+
 .yielded-content {
 	flex: 1 0 auto;
 }
 
-  @media (min-width: 600px) {
-    .yielded-content {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: $light-gray;
-    }
-    .contained {
-      width: 600px;
-      height: 100%;
-      background-color: white;
-      box-shadow: 1px 6px 19px -1px rgba(0, 0, 0, .1);
-      padding-bottom: 32px;
-    }
-  }
+@media (min-width: 600px) {
+	.yielded-content {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: $light-gray;
+	}
+	.contained {
+		width: 600px;
+		height: 100%;
+		background-color: white;
+		box-shadow: 1px 6px 19px -1px rgba(0, 0, 0, 0.1);
+		padding-bottom: 32px;
+	}
+}
