--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,14 +5,17 @@ $light-gray: #f9fbfe;
 $dark-gray: #2f2f3e;
 $orange: #ff9774;
 $red: #ff464b;
-$flat-red: #FFDCDD;
-$wine-red: #B33236;
+$flat-red: #ffdcdd;
+$wine-red: #b33236;
 $black: #2f2f3e;
 $light-black: #6c7b8a;
+
 $blue: #828ff4;
 $blue-2: #4c5fef;
 $blue-3: #4888ff;
 $flat-blue-5: #cacffb;
+$flat-blue-10: #cfeff9;
+
 $blueish-gray: #f4f6f9;
 
 $flat-gray-3: #dfe5ee;
