--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -249,6 +249,7 @@ $day-header-height: 60px;
 							.time {
 								font-size: 10px;
 								font-weight: 500;
+								color: rgba(108, 123, 138, 1);
 							}
 						}
 					}
