--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -240,7 +240,7 @@ $day-header-height: 60px;
 							overflow-x: overlay;
 
 							.title {
-								@extend .textSm;
+								@extend .textSm, .my-1;
 
 								color: $dark-gray;
 								font-weight: 600;
