--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,8 +1,6 @@
 <div class="profiles-index relative">
   <section class="head">
-    <button>
-      <%= image_tag "icons/search.svg", alt: "search" %>
-    </button>
+    <div style="width: 36px;"></div>
     <p>FREELANCERS</p>
     <button id="filter-trigger">
       <%= image_tag "icons/filter.svg", alt: "filter" %>
