--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,7 +1,7 @@
 <div class="profiles-index relative">
   <section class="head">
-    <div style="width: 36px;"></div>
-    <p>FREELANCERS</p>
+    <div style="width: 28px;"></div>
+    <p class="textBetween">FREELANCERS</p>
     <button id="filter-trigger">
       <%= image_tag "icons/filter.svg", alt: "filter" %>
     </button>
