--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -39,8 +39,13 @@ input[type="submit"] {
 		background: $light-blue-gradient;
 	}
 
+	&.btn-transparent {
+		font-size: 14px !important;
+	}
+
 	&.btn-white {
 		background: #ffffff;
+		font-size: 14px !important;
 		box-shadow: 0px 2px 10px rgba(50, 51, 94, 0.17);
 	}
 
