--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -7,11 +7,11 @@
     </button>
   </section>
 
-  <section class="switch flex justify-content-between p-3 my-3" style="background-color: #F9FBFE;">
-    <%= link_to profiles_path(network: true), remote: true, class: "flex items-center btn #{params[:network] ? 'btn-white' : 'btn-transparent'}" do %>
+  <section class="switch py-2 px-3 my-3" style="background-color: #F9FBFE;">
+    <%= link_to profiles_path(network: true), remote: true, class: "flex items-center justify-content-center btn #{params[:network] ? 'btn-white' : 'btn-transparent'}" do %>
       <%= image_tag "icons/person-check.svg", alt: "in network", class: "vertical-align-middle" %> My network
     <% end %>
-    <%= link_to profiles_path, remote: true, class: "flex items-center btn #{params[:network] ? 'btn-transparent' : 'btn-white'}" do %>
+    <%= link_to profiles_path, remote: true, class: "flex items-center justify-content-center btn #{params[:network] ? 'btn-transparent' : 'btn-white'}" do %>
       <%= image_tag "icons/people-dark.svg", alt: "everyone", class: "vertical-align-middle" %> Everyone
     <% end %>
   </section>
