--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -1,7 +1,6 @@
 .profile-card {
 	border-bottom: 1px solid #f4f6f9;
 	padding: 16px;
-	height: 320px;
 	display: flex;
 	flex-direction: column;
 
@@ -38,6 +37,7 @@
 			.name {
 				@extend .mt-2, .mb-3;
 
+				font-weight: 600;
 				font-size: 16px;
 			}
 
@@ -45,13 +45,16 @@
 				@extend .m-0;
 
 				font-size: 14px;
+				font-weight: normal;
 				text-transform: uppercase;
+				color: $flat-dark-4;
 			}
 
 			.location {
 				@extend .m-0;
 
 				font-size: 12px;
+				color: rgba(137, 137, 148, 1);
 			}
 		}
 
