--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,8 +5,8 @@ $light-gray: #f9fbfe;
 $dark-gray: #2f2f3e;
 $orange: #ff9774;
 $red: #ff464b;
-$flat-red: #FFDCDD;
-$wine-red: #B33236;
+$flat-red: #ffdcdd;
+$wine-red: #b33236;
 $black: #2f2f3e;
 $light-black: #6c7b8a;
 $blue: #828ff4;
@@ -18,6 +18,7 @@ $blueish-gray: #f4f6f9;
 $flat-gray-3: #dfe5ee;
 
 $flat-dark-1: #121217;
+$flat-dark-4: rgb(98, 98, 113);
 $flat-dark-5: #140f26;
 
 $flat-brown-5: #cbbdbd;
