--- a/app/assets/stylesheets/components/_action_button.scss
+++ b/app/assets/stylesheets/components/_action_button.scss
@@ -56,5 +56,6 @@
 		backdrop-filter: blur(100px);
 		font-size: 40px;
 		color: white;
+		filter: drop-shadow(0px 10px 16px rgba(50, 51, 94, 0.15));
 	}
 }
