--- a/app/assets/stylesheets/components/_action_button.scss
+++ b/app/assets/stylesheets/components/_action_button.scss
@@ -52,8 +52,7 @@
 
 		width: 64px;
 		height: 64px;
-		background: $blue-2;
-		backdrop-filter: blur(100px);
+		background: linear-gradient(315deg, #4048ef 0%, #5a7bef 100%);
 		font-size: 40px;
 		color: white;
 		filter: drop-shadow(0px 10px 16px rgba(50, 51, 94, 0.15));
