--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -8,10 +8,10 @@
   </section>
 
   <section class="switch flex justify-content-between p-3 my-3" style="background-color: #F9FBFE;">
-    <%= link_to profiles_path, remote: true, class: "flex items-center btn #{params[:all] ? 'btn-transparent' : 'btn-white'}" do %>
+    <%= link_to profiles_path, remote: true, class: "flex items-center btn textBetween #{params[:all] ? 'btn-transparent' : 'btn-white'}" do %>
       <%= image_tag "icons/person-check.svg", alt: "in network", class: "vertical-align-middle" %> My network
     <% end %>
-    <%= link_to profiles_path(all: true), remote: true, class: "flex items-center btn #{params[:all] ? 'btn-white' : 'btn-transparent'}" do %>
+    <%= link_to profiles_path(all: true), remote: true, class: "flex items-center textBetween btn #{params[:all] ? 'btn-white' : 'btn-transparent'}" do %>
       <%= image_tag "icons/people-dark.svg", alt: "everyone", class: "vertical-align-middle" %> Everyone
     <% end %>
   </section>
