--- a/app/views/profiles/_filter_content.html.erb
+++ b/app/views/profiles/_filter_content.html.erb
@@ -47,7 +47,7 @@
         <%# DUMMY BUTTON FOR NOW %>
         <button class="btn btn-float" style="user-select: none">Saved</button>
       </div>
-      <%= f.submit "Show results", class: "uppercase btn btn-primary w-100 py-3" %>
+      <%= f.submit "Show results", class: "uppercase btn btn-primary w-100 py-3 height-unset" %>
     <% end %>
   </section>
 </div>
