--- a/app/assets/stylesheets/pages/_schedule.scss
+++ b/app/assets/stylesheets/pages/_schedule.scss
@@ -229,6 +229,7 @@ $day-border: 1px solid #e8e9eb;
 
 						background: $flat-orange-5;
 						border-top: 8px solid $flat-orange-3;
+						margin-right: -2px;
 
 						.event-details {
 							background: $flat-orange-5;
