--- a/app/views/users/invitations/create.js.erb
+++ b/app/views/users/invitations/create.js.erb
@@ -13,7 +13,7 @@
   } else {
 
     if (email === "" ) {
-      emailInput.style.border = "1px solid red";
+      emailInput.style.border = "1px solid #ff464b";
       return
     } else {
       emailInput.style.border = "none";
