--- a/app/views/profiles/index.js.erb
+++ b/app/views/profiles/index.js.erb
@@ -2,8 +2,11 @@
   const profileContainer = document.querySelector(".cards");
   const [network, all] = document.querySelectorAll(".switch a");
   const filterContent = document.getElementById("filter-content");
-
+  const addFreelancers = document.getElementById("addfree")
   profileContainer.innerHTML = "<%= j render partial: "profiles/cards", locals: { profiles: @profiles } %>";
+
+
+  addFreelancers?.remove();
 
   if ("<%= params[:all] %>" === "true") {
     all.classList.add("btn-white");
