fix profiles index

--- a/app/views/profiles/index.js.erb
+++ b/app/views/profiles/index.js.erb
@@ -20,7 +20,7 @@
     filterContent.classList.add("none");
   }
 
-  if (trigger && <%= @filter_count %> > 0) {
+  if (trigger && <%= @filter_count.is_a?(Integer) ? @filter_count : 0 %> > 0) {
     const template = `
       <span class="skill-pill blue m-0 filter-count">
         <%= @filter_count.to_s.rjust(2, "0") %>
