--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -7,7 +7,7 @@
     </button>
   </section>
 
-  <section class="switch flex justify-content-between p-3 my-3" style="background-color: #F9FBFE;">
+  <section class="switch flex justify-content-between px-3 py-2 my-3" style="background-color: #F9FBFE;">
     <%= link_to profiles_path, remote: true, class: "flex items-center btn textBetween #{params[:all] ? 'btn-transparent' : 'btn-white'}" do %>
       <%= image_tag "icons/person-check.svg", alt: "in network", class: "vertical-align-middle" %> My network
     <% end %>
