--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,10 @@
         <% else %>
           <%= image_tag link[:icon], alt: link[:text], class: "nav-icon" %>
         <% end %>
+        <% unread_count ||= Message.unread_user_scoped_count(current_user) %>
+        <% if link[:text] == "Inbox" && unread_count.positive? %>
+          <span class="notification"><%= unread_count %></span>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
